develop - Add courses CRUD. Add some migrations behaviors. Emit 405 response in validation errors.
