# app/Http/Controllers/CoursesController.php
@@ -2,21 +2,21 @@
 
 namespace App\Http\Controllers;
 
+use App\Models\Course;
 use Illuminate\Http\Request;
-use App\Models\Student;
-use App\Http\Requests\StudentRequest;
+use App\Http\Requests\CoursesRequest;
 
-class StudentsController extends Controller
+
+
+class CoursesController extends Controller
 {
-
-    //TODO: Implement try and catch
 
     /**
      * @OA\Get(
-     *     path="/api/students",
-     *     tags={"Students"},
-     *     summary="Get all students",
-     *     operationId="getStudents",
+     *     path="/api/courses",
+     *     tags={"Courses"},
+     *     summary="Get all courses",
+     *     operationId="getCourses",
      *     @OA\Response(
      *         response=200,
      *         description="successful operation",
@@ -28,18 +28,18 @@ class StudentsController extends Controller
      *     security={{"bearerToken":{}}}
      * )
      */
-    public function getStudents()
+    public function getCourses()
     {
-        return Student::all();
+        return Course::all();
     }
 
     /**
-     * Create a student.
+     * Create a course.
      *
      * @OA\Post(
-     *     path="/api/students",
-     *     tags={"Students"},
-     *     operationId="insertStudents",
+     *     path="/api/courses",
+     *     tags={"Courses"},
+     *     operationId="insertCourses",
      *     @OA\Response(
      *         response=405,
      *         description="Validation exception"
@@ -52,22 +52,44 @@ class StudentsController extends Controller
      *                 type="object",
      *                 required={
      *                  "name",
-     *                  "last_name"
+     *                  "hours",
+     *                  "price",
+     *                  "percent_teacher",
+     *                  "start_date",
+     *                  "finish_date"
      *                  },
      *                 @OA\Property(
      *                     property="name",
-     *                     description="Insert name of the student",
+     *                     description="Insert courses's name",
      *                     type="string",
      *                 ),
      *                 @OA\Property(
-     *                     property="last_name",
-     *                     description="Insert last name of the student",
-     *                     type="string"
+     *                     property="hours",
+     *                     description="Insert courses's hours",
+     *                     type="integer"
      *                 ),
      *                 @OA\Property(
-     *                     property="foto",
-     *                     description="Insert foto of the student",
-     *                     type="string"
+     *                     property="price",
+     *                     description="Insert courses's price",
+     *                     type="float"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="percent_teacher",
+     *                     description="Insert courses's percent teacher",
+     *                     type="float",
+     *                      format="%"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="start_date",
+     *                     description="Insert courses's start date",
+     *                     type="date",
+     *                     format="YYYY-MM-DD"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="finish_date",
+     *                     description="Insert courses's finish date",
+     *                     type="date",
+     *                     format="YYYY-MM-DD"
      *                 )
      *             )
      *         )
@@ -75,11 +97,11 @@ class StudentsController extends Controller
      *     security={{"bearerToken":{}}}
      * )
      */
-    public function insertStudents(StudentRequest $request)
+    public function insertCourses(CoursesRequest $request)
     {
         $data = $request->input();
 
-        $response = Student::create($data);
+        $response = Course::create($data);
         return response()->json([
             "data" => $response,
             "status" => "Success",
@@ -88,12 +110,12 @@ class StudentsController extends Controller
     }
 
     /**
-     * Get an existing student.
+     * Get an existing course.
      *
      * @OA\Get(
-     *     path="/api/students/{id}",
-     *     tags={"Students"},
-     *     operationId="getStudentById",
+     *     path="/api/courses/{id}",
+     *     tags={"Courses"},
+     *     operationId="getCourseById",
      *     @OA\Parameter(
      *         name="id",
      *         in="path",
@@ -119,17 +141,17 @@ class StudentsController extends Controller
      *     security={{"bearerToken":{}}}
      * )
      */
-    public function getStudentById(string $id)
+    public function getCourseById(string $id)
     {
-        $data = Student::find($id);
+        $data = Course::find($id);
 
-        if(isset($data)){
+        if (isset($data)) {
             return response()->json([
                 "data" => $data,
                 "status" => "Success",
                 "mensaje" => "Success operation"
             ]);
-        }else{
+        } else {
             return response()->json([
                 "data" => null,
                 "status" => "error",
@@ -139,16 +161,16 @@ class StudentsController extends Controller
     }
 
     /**
-     * Update an existing student.
+     * Update an existing course.
      *
      * @OA\Put(
-     *     path="/api/students/{id}",
-     *     tags={"Students"},
-     *     operationId="updateStudent",
+     *     path="/api/courses/{id}",
+     *     tags={"Courses"},
+     *     operationId="updateCourse",
      *     @OA\Parameter(
      *         name="id",
      *         in="path",
-     *         description="ID of the student that needs to be updated",
+     *         description="ID of the course that needs to be updated",
      *         required=true,
      *         @OA\Schema(
      *             type="integer",
@@ -175,22 +197,44 @@ class StudentsController extends Controller
      *                 type="object",
      *                 required={
      *                  "name",
-     *                  "last_name"
+     *                  "hours",
+     *                  "price",
+     *                  "percent_teacher",
+     *                  "start_date",
+     *                  "finish_date"
      *                  },
      *                 @OA\Property(
      *                     property="name",
-     *                     description="Updated name of the student",
+     *                     description="Insert courses's name",
      *                     type="string",
      *                 ),
      *                 @OA\Property(
-     *                     property="last_name",
-     *                     description="Updated last name of the student",
-     *                     type="string"
+     *                     property="hours",
+     *                     description="Insert courses's hours",
+     *                     type="integer"
      *                 ),
      *                 @OA\Property(
-     *                     property="foto",
-     *                     description="Updated foto of the student",
-     *                     type="string"
+     *                     property="price",
+     *                     description="Insert courses's price",
+     *                     type="float"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="percent_teacher",
+     *                     description="Insert courses's percent teacher",
+     *                     type="float",
+     *                      format="%"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="start_date",
+     *                     description="Insert courses's start date",
+     *                     type="date",
+     *                     format="YYYY-MM-DD"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="finish_date",
+     *                     description="Insert courses's finish date",
+     *                     type="date",
+     *                     format="YYYY-MM-DD"
      *                 )
      *             )
      *         )
@@ -198,22 +242,25 @@ class StudentsController extends Controller
      *     security={{"bearerToken":{}}}
      * )
      */
-    public function updateStudent(Request $request, string $id)
+    public function updateCourse(CoursesRequest $request, string $id)
     {
-        $data = Student::find($id);
+        $data = Course::find($id);
 
         if (isset($data)) {
             $data->name = $request->name;
-            $data->last_name = $request->last_name;
-            $data->foto = $request->foto;
+            $data->hours = $request->hours;
+            $data->price = $request->price;
+            $data->percent_teacher = $request->percent_teacher;
+            $data->start_date = $request->start_date;
+            $data->finish_date = $request->finish_date;
 
-            if($data->save()){
+            if ($data->save()) {
                 return response()->json([
                     "data" => $data,
                     "status" => "Success",
                     "mensaje" => "Operación exitosa"
                 ]);
-            }else{
+            } else {
                 return response()->json([
                     "data" => null,
                     "status" => "error",
@@ -222,24 +269,24 @@ class StudentsController extends Controller
             }
         } else {
             return response()->json([
-                "data"=>null,
+                "data" => null,
                 "status" => "error",
-                "mensaje"=>"No existe el elemento"
+                "mensaje" => "No existe el elemento"
             ]);
         }
     }
 
     /**
-     * Delete an existing student.
+     * Delete an existing course.
      *
      * @OA\Delete(
-     *     path="/api/students/{id}",
-     *     tags={"Students"},
-     *     operationId="deleteStudent",
+     *     path="/api/courses/{id}",
+     *     tags={"Courses"},
+     *     operationId="deleteCourse",
      *     @OA\Parameter(
      *         name="id",
      *         in="path",
-     *         description="ID of the student that needs to be delete",
+     *         description="ID of the course that needs to be delete",
      *         required=true,
      *         @OA\Schema(
      *             type="integer",
@@ -261,12 +308,12 @@ class StudentsController extends Controller
      *     security={{"bearerToken":{}}}
      * )
      */
-    public function deleteStudent(string $id)
+    public function deleteCourse(string $id)
     {
-        $data = Student::find($id);
+        $data = Course::find($id);
 
         if (isset($data)) {
-            if(Student::destroy($id)) {
+            if (Course::destroy($id)) {
                 return response()->json([
                     "data" => $data,
                     "status" => "Success",
@@ -289,12 +336,12 @@ class StudentsController extends Controller
     }
 
     /**
-     * Get student's courses.
+     * Get courses's students.
      *
      * @OA\Get(
-     *     path="/api/student_courses/{id}",
-     *     tags={"Students"},
-     *     operationId="getStudentCourses",
+     *     path="/api/courses_student/{id}",
+     *     tags={"Courses"},
+     *     operationId="getCourseStudents",
      *     @OA\Parameter(
      *         name="id",
      *         in="path",
@@ -320,13 +367,13 @@ class StudentsController extends Controller
      *     security={{"bearerToken":{}}}
      * )
      */
-    public function getStudentCourses(string $id)
+    public function getCourseStudents(string $id)
     {
-        $data = Student::find($id);
+        $data = Course::find($id);
 
         if (isset($data)) {
 
-            $courses = $data->Courses;
+            $courses = $data->Students;
 
             return response()->json([
                 "data" => $courses,
